kibana allow netpol ingress added

--- a/simple-observability/kibana-ingress.yaml
+++ b/simple-observability/kibana-ingress.yaml
@@ -1,8 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: kibana
+  name: kibana-ingress
   namespace: simple-observability
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
 spec:
   ingressClassName: nginx
   rules:
