request limit added

--- a/simple-observability/elasticsearch.yaml
+++ b/simple-observability/elasticsearch.yaml
@@ -10,3 +10,14 @@ spec:
       count: 1
       config:
         node.store.allow_mmap: false
+      podTemplate:
+        spec:
+          containers:
+            - name: elasticsearch
+              resources:
+                requests:
+                  memory: 1Gi
+                  cpu: '500m'
+                limits:
+                  memory: 2Gi
+                  cpu: '1'
