--- a/simple-observability/elasticsearch.yaml
+++ b/simple-observability/elasticsearch.yaml
@@ -10,14 +10,18 @@ spec:
       count: 1
       config:
         node.store.allow_mmap: false
+        xpack.ml.enabled: false
       podTemplate:
         spec:
           containers:
             - name: elasticsearch
+              env:
+                - name: ES_JAVA_OPTS
+                  value: '-Xms768m -Xmx768m'
               resources:
                 requests:
                   memory: 1Gi
-                  cpu: '500m'
+                  cpu: 500m
                 limits:
-                  memory: 2Gi
-                  cpu: '1'
+                  memory: 1500Mi
+                  cpu: 1
