--- a/simple-observability/netpol-default-deny-egress.yaml
+++ b/simple-observability/netpol-default-deny-egress.yaml
@@ -1,9 +1,9 @@
-# apiVersion: networking.k8s.io/v1
-# kind: NetworkPolicy
-# metadata:
-#   name: default-deny-egress
-#   namespace: simple-observability
-# spec:
-#   podSelector: {}
-#   policyTypes:
-#     - Egress
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: default-deny-egress
+  namespace: simple-observability
+spec:
+  podSelector: {}
+  policyTypes:
+    - Egress
