--- a/simple-observability/base/elasticsearch.yaml
+++ b/simple-observability/base/elasticsearch.yaml
@@ -5,14 +5,29 @@ metadata:
   namespace: simple-observability
 spec:
   version: 8.11.1
+
+  podDisruptionBudget:
+    spec:
+      minAvailable: 1
+
   nodeSets:
     - name: default
       count: 2
+
       config:
         node.store.allow_mmap: false
         xpack.ml.enabled: false
+
       podTemplate:
         spec:
+          affinity:
+            podAntiAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                - labelSelector:
+                    matchLabels:
+                      elasticsearch.k8s.elastic.co/cluster-name: simple-es
+                  topologyKey: kubernetes.io/hostname
+
           containers:
             - name: elasticsearch
               env:
