--- a/simple-observability/base/elasticsearch.yaml
+++ b/simple-observability/base/elasticsearch.yaml
@@ -21,6 +21,13 @@ spec:
       podTemplate:
         spec:
           affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: node-role.kubernetes.io/worker
+                        operator: Exists
+
             podAntiAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
                 - labelSelector:
